--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,20 @@ body{
 
 main{
     padding: 20px;
-    
+    margin-top: 5px;
+    height: 100%auto;
+    width: 100%auto;    
+}
+
+
+#map { 
+    height: 500px; 
+    width: 500px;
+}
+
+.main2{
+    height: 100%auto;
+    width: 100%auto;    
 }
 
 header{
@@ -130,14 +143,14 @@ i{
 }
 
 a.selected{
-    color: #fff;
+    color: #2D3654;
 }
 
 .selected:before{
     content: '';
     width: 3px;
     height: 80%;
-    background: white;
+    background: #2D3654;
     position: absolute;
     top: 10%;
     left: -30px;
@@ -174,17 +187,17 @@ a.selected{
 
 
 #contenedor {
-    text-align: center;
+    text-align: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
     grid-gap: 10px;
 }
 
 #caja1, #caja2, #caja3 {
     display: inline-block;
     text-align: center;
-    vertical-align: middle;
-    padding-top: 20%;
+    vertical-align: center;
+    padding-top: 10%;
     width: 200px;
     height: 200px;
 }
@@ -201,3 +214,49 @@ a.selected{
     background-color: #2ab2ea;
     color:azure;    
 }
+
+.title {
+    text-align: center;
+    color: #8EFCBA; }
+
+.calendar {
+    background: #8EFCBA;
+    width: 80%;
+    max-width: 600px;
+    margin: 1em auto;
+    padding: .5em 0; }
+    .calendar__info {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 0 2em;
+      font-size: 1.2em;
+      text-transform: uppercase; }
+    .calendar__prev, .calendar__next {
+      color: #573b8a;
+      cursor: pointer;
+      font-size: 1.3em; }
+    .calendar__prev {
+      margin-right: auto; }
+    .calendar__next {
+      margin-left: auto; }
+    .calendar__week, .calendar__dates {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      grid-gap: 10px; }
+    .calendar__month, .calendar__year {
+      padding: .5em 1em; }
+    .calendar__item {
+      text-align: center;
+      line-height: 2; }
+    .calendar__today {
+      background: white;
+      color: black;
+      width: 50%;
+      border-radius: 50%;
+      margin: auto; }
+    .calendar__last-days {
+      opacity: .3; }
